# flask-rest-api

./: README.md  pyproject.toml
src/flask_rest_api/: app.py  quotes.db
