[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = ""
authors = ["Andrew Casey <accasey@hotmail.com.au>"]
license = "MIT"
readme  = "README.md"
homepage = "https://github.com/accasey/flask-rest-api.git"
repository = "git@github.com:accasey/flask-rest-api.git"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask-marshmallow = "^0.13.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
